--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <h2>Text Styles</h2>
         <div class="text-container">
-            <div class="box">
+            <div class="font-1 box">
                 <h1>H1: Main Page Header</h1>
                 <ul>
                     <li>"Font-weight: xxx"</li>
@@ -60,7 +60,7 @@
                     <li>"Font-type: xxx"</li>
                 </ul>
             </div>
-            <div class="box">
+            <div class="font-2 box">
                 <h2>H2: Subheading</h2>
                 <ul>
                     <li>"Font-weight: xxx"</li>
@@ -68,7 +68,7 @@
                     <li>"Font-type: xxx"</li>
                 </ul>
             </div>
-            <div class="box">
+            <div class="font-3 box">
                 <p>P: Paragraph Text</p>
                 <ul>
                     <li>"Font-weight: xxx"</li>
@@ -79,4 +79,7 @@
         </div>
     </div>
 </body>
+<footer>
+    <p>Created by Adrian Doran</p>
+</footer>
 </html>
